THIS one is my original google clone project

--- a/index.html
+++ b/index.html
@@ -4,26 +4,19 @@
 	<title>New Tab</title>
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
-<body >
+<body>
 
 <header>
-	<nav id="Left" class="fonts">
-		<a href="#" class="fonts">About</a>
-		<a href="#" class="fonts">Store</a>
+	<nav id="Left">
+		<a href="#">About</a>
+		<a href="#">Store</a>
 	</nav>
-	<nav id="Right" class="fonts">
-		<a href="#" class="fonts">Gmail</a>
-		<a href="#" class="fonts">Images</a>
-		<a href="#">
-			<img class="img1" src="Images/google-apps.png">
-		</a>
-		<a href="#"  class="notifications">
-			
-			<img class="img2" src="Images/google-notifications.png">
-		</a>
-		<a href="#" class="fonts">
-			<button class="link">Sign In</button>
-		</a>
+	<nav id="Right">
+		<a href="#">Gmail</a>
+		<a href=""> Images</a>
+		<img src="Images/google-apps.png">
+		<img src="Images/google-notifications.png">
+		<img src="Images/fav.png">
 	</nav>
 </header>
 
@@ -31,7 +24,7 @@
 	<div id="google">
 		<img src="Images/google.png"><br>
 		<input type="search" placeholder="Search Google or type an URL. ">
-		<img src="Images/microphone.png" class="mic">
+		<img src="Images/microphone.png">
 		<br>
 		<button>Google Search</button>
 		<button>I'm Feeling Lucky</button>
@@ -43,15 +36,15 @@
 </body>
 
 <footer>
-	<div id="leftfoot" class="fonts">
-		<a href="#" class="fonts">Advertising</a>
-		<a href="#" class="fonts">Business</a>
+	<div id="leftfoot">
+		<a href="#">Advertising</a>
+		<a href="#">Business</a>
 	</div>
 
-	<div id="rightfoot" class="fonts">
-		<a href="#" class="fonts">Privacy</a>
-		<a href="#" class="fonts">Terms</a>
-		<a href="#" class="fonts">Settings</a>
+	<div id="rightfoot">
+		<a href="#">Privacy</a>
+		<a href="#">Terms</a>
+		<a href="#">Settings</a>
 	</div>
 	
 </footer>
